--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "react-icons": "^5.2.1"
+        "moment": "^2.30.1",
+        "react-icons": "^5.2.1",
+        "sweetalert2": "^11.12.2"
     }
 }
