--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dependencies": {
         "moment": "^2.30.1",
         "react-icons": "^5.2.1",
-        "sweetalert2": "^11.12.2"
+        "react-paginate": "^8.2.0",
+        "sweetalert2": "^11.12.3",
+        "warn": "^1.0.1"
     }
 }
