--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "apexcharts": "^3.52.0",
         "moment": "^2.30.1",
         "react-icons": "^5.2.1",
         "react-paginate": "^8.2.0",
